--- a/save-points/00-get-started/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/save-points/00-get-started/BlazingPizza.Client/Shared/MainLayout.razor
@@ -1,5 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
+<div class="top-bar">
+    <a class="logo" href="https://www.pizzahut.co.id/">
+        <img src="img/logo.svg"/>
+    </a>
+
+    <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
+        <img src="img/pizza-slice.svg" />
+        <div>Get Pizza</div>
+    </NavLink>
+</div>
+
 <div class="content">
     @Body
 </div>
