--- a/save-points/00-get-started/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
+++ b/save-points/00-get-started/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
@@ -1,4 +1,6 @@
-﻿<div class="dialog-container">
+﻿@inject HttpClient HttpClient
+
+<div class="dialog-container">
     <div class="dialog">
         <div class="dialog-title">
             <h2>@Pizza.Special?.Name</h2>
@@ -19,6 +21,42 @@
                     @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
                 </span>
             </div>
+            <div>
+                <label>Extra Toppings:</label>
+                @if (toppings is null)
+                {
+                    <select class="custom-select" disabled>
+                        <option>(loading...)</option>
+                    </select>
+                }
+                else if (Pizza.Toppings.Count >= 6)
+                {
+                    <div>(maximum reached)</div>
+                }
+                else
+                {
+                    <select class="custom-select" @onchange="ToppingSelected">
+                        <option value="-1" disabled selected>(select)</option>
+                        @for (var i = 0; i < toppings.Count; i++)
+                        {
+                            <option value="@i">@toppings[i].Name - (£@(toppings[i].GetFormattedPrice()))</option>
+                        }
+                    </select>
+                }
+            </div>
+            <div class="toppings">
+                @foreach (var topping in Pizza.Toppings)
+                {
+                    if (topping?.Topping is not null)
+                    {
+                        <div class="topping">
+                            @topping.Topping.Name
+                            <span class="topping-price">@topping.Topping.GetFormattedPrice()</span>
+                            <button type="button" class="delete-topping" @onclick="@(() => RemoveTopping(topping.Topping))">x</button>
+                        </div>
+                    }
+                }
+            </div>
         </form>
         <div class="dialog-buttons">
             <button class="btn btn-secondary mr-auto">Cancel</button>
@@ -32,5 +70,36 @@
 </div>
 
 @code {
-    [Parameter, EditorRequired] public Pizza Pizza { get; set; } = new();
+    // toping is only null while loading
+    List<Topping> toppings = new();
+
+    [Parameter, EditorRequired] public Pizza Pizza { get; set; } = default!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        toppings = await HttpClient.GetFromJsonAsync<List<Topping>>("toppings") ?? new();
+    }
+
+    void ToppingSelected(ChangeEventArgs e)
+    {
+        if (int.TryParse((string?)e.Value, out var index) && index >= 0)
+        {
+            AddTopping(toppings[index]);
+        }
+    }
+
+    void AddTopping(Topping topping)
+    {
+        if (toppings is null) return;
+        if (Pizza.Toppings.Find(pt => pt.Topping == topping) is null)
+        {
+            Pizza.Toppings.Add(new PizzaTopping() { Topping = topping });
+        }
+    }
+
+    void RemoveTopping(Topping topping)
+    {
+        Pizza.Toppings.RemoveAll(pt => pt.Topping == topping);
+    }
+
 }
