Display the current order

--- a/save-points/00-get-started/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
+++ b/save-points/00-get-started/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
@@ -59,11 +59,11 @@
             </div>
         </form>
         <div class="dialog-buttons">
-            <button class="btn btn-secondary mr-auto">Cancel</button>
+            <button class="btn btn-secondary mr-auto" @onclick="OnCancel">Cancel</button>
             <span class="mr-center">
                 Price: <span class="price">@(Pizza.GetFormattedTotalPrice())</span>
             </span>
-            <button class="btn btn-success ml-auto">Order</button>
+            <button class="btn btn-success ml-auto" @onclick="OnConfirm">Order</button>
         </div>
     </div>
 
@@ -74,6 +74,8 @@
     List<Topping> toppings = new();
 
     [Parameter, EditorRequired] public Pizza Pizza { get; set; } = default!;
+    [Parameter, EditorRequired] public EventCallback OnCancel { get; set; }
+    [Parameter, EditorRequired] public EventCallback OnConfirm { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
